# server

./: .gitignore  .gitmodules  Makefile  README.md  client.py  go.mod  go.sum  main.go  packet.py  pyproject.toml  pytest.ini  reads.txt  run.sh  test_request.sh  todo.txt
.github/: discord-devlogs.yml  main.yml
.github/workflows/: discord-notify.yml  discord-updates.yml  main.yml
auth/: README.md  auth.go  go.mod  go.sum  main.go  template.go
auth/db/: db.go
auth/models/: models.go
auth/scripts/: convert_to_mp4.sh  run.sh
ci/: router.nginx
comtrol/: control.go
config/: config.go
control/: control.go
docs/: server.drawio.xml
ext/: go.mod  routes.py  run.sh
ext/auth/: auth.go
ext/logger/: logger.go
ext/test/: client.py
fuzz/: fuzz_auth.py  fuzz_game.py  fuzz_gateway.py  fuzz_router.py  fuzz_server.py
gameplay/: go.mod  main.go
router/: default.conf  nginx.conf  ssl-params.conf
scripts/: add.sh  clean.sh  clear.sh  firewall.sh  fuzz.sh  install.sh  logerror.sh  remove.sh  ruff.sh  run.sh  ssl.sh  stop.sh  test.sh  update.sh
server/: __init__.py  commands.py  gateway.py  logger.py  packet.py  parser.py  server.py  types.py
server/auth/: __init__.py  auth.py  auth_parser.py  todo.txt
server/auth_server/: Makefile  README.md  pyproject.toml
server/auth_server/auth_server/: __init__.py  auth_server.py  parser.py
server/auth_server/scripts/: add.sh  clear.sh  install.sh  remove.sh  ruff.sh  run.sh  update.sh
server/command_server/: parser.py  server.py
server/game/: __init__.py  game_parser.py
server/game_server/: game_server.py
server/gateway/: __init__.py  auth_gateway.py  cmd_gateway.py  command_gateway.py  game_gateway.py  gateparser.py  gateway.py  gateway_parser.py
server/logger/: __init__.py
server/loggers/: logger.py  logger_to_file.py
server/network/: gateway.py
server/parser/: __init__.py  auth_parser.py  command_parser.py  game_parser.py  parser.py
server/server/: __init__.py  (+5 more)
test/: fuzz.py
tests/: test_router.sh  test_server.sh
(+14 files in other folders)
