[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["rodfer0x80 <rodrigolf080@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"
wheel = "^0.43.0"
autobahn = "^23.6.2"


django = "^5.0.6"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "bin.__main__:main"   