[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = ""
authors = ["rodfer0x80 <rodrigolf080@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
utils = {git = "https://github.com/halfass-it/utils.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
